<resources>
    <string name="app_name">test2</string>
    <string name="add">추가</string>
    <string name="terminate">종료</string>
    <string name="addPhoto">사진등록</string>
    <string name="name">이름</string>
    <string name="phoneNum">전화번호</string>
    <string name="editText">adit text</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="addUser">사용자 등록</string>
    <string name="updateUser">사용자 수정</string>
    <string name="address">주소록</string>
    <string name="deleteMent">삭제하시겠습니까?</string>
</resources>
