<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        app:scale_base_height="162"
        app:scale_base_width="602"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/deleteMent"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:background="@color/black"
            app:scale_height="80"
            app:scale_width="602"
            app:scale_textsize="30"/>
        
        <Button
            android:id="@+id/deleteCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/cancel"
            app:scale_width="300"
            app:scale_height="80"
            app:scale_left="0"
            app:scale_top="82"
            app:scale_textsize="30"/>

        <Button
            android:id="@+id/deleteOk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:background="@color/black"
            app:scale_width="300"
            app:scale_height="80"
            app:scale_left="302"
            app:scale_top="82"
            app:scale_textsize="30"/>

    </com.ssomai.android.scalablelayout.ScalableLayout>
</LinearLayout>