<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"

        app:scale_base_height="40"
        app:scale_base_width="360"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/address"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            app:scale_width="360"
            app:scale_textsize="30"/>

    </com.ssomai.android.scalablelayout.ScalableLayout>


    <ListView
        android:id="@+id/lists"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></ListView>


    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        app:scale_base_height="60"
        app:scale_base_width="360"

        >

        <Button
            android:id="@+id/addPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"


            app:scale_height="60"
            app:scale_textsize="20"

            app:scale_width="180"

            />

        <Button
            android:id="@+id/terminate"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/terminate"

            app:scale_height="60"
            app:scale_left="180"
            app:scale_textsize="20"

            app:scale_width="180" />


    </com.ssomai.android.scalablelayout.ScalableLayout>
</LinearLayout>